# pylabwons

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sandbox.ipynb
.github/workflows/: archiving.yml  publish.yml
notebook/: archiving.ipynb  archiving.py  sandbox.ipynb
pylabwons/: __init__.py  typesys.py
pylabwons/access/: tickers.py  url.py
pylabwons/analytic/: __init__.py  analyzer.py  graphic.py  loader.py  prep.py
pylabwons/analytic/plugin/: technical.py
pylabwons/archive/: exdef.py  tickers.py
pylabwons/archiving/: __init__.py  _exdef.py  archive.py  archive_Dep.py  manager.py  prep.py
pylabwons/data/stock/ohlcv/: 000020.parquet  000020.pkl  000070.pkl  000080.pkl  000100.pkl  000120.pkl  000150.pkl  000210.pkl  000230.pkl  000240.pkl  000250.pkl  000270.pkl  000320.pkl  000370.pkl  000400.pkl  000440.pkl  000490.pkl  000500.pkl  (+1203 more)
pylabwons/data/tickers/: tickers.csv  tickers.parquet
pylabwons/fetch/: __init__.py  backfill.py  update.py  wrapper.py
pylabwons/fetch/stock/: series.py  tickers.py  wrapper.py
pylabwons/read/: addr.py  exdef.py  tickers.py
pylabwons/util/: __init__.py  logger.py  path.py  prep.py  tradingdate.py
src/pylabwons/: __init__.py
src/pylabwons/api/: generic.py
src/pylabwons/archive/: wics.json
src/pylabwons/core/: __init__.py  backtest.py  detector.py  indicator.py  viewer.py
src/pylabwons/schema/: __init__.py  datadict.py  fnguide.py  ohlcv.py  timeseries.py  trace.py  wics.py
src/pylabwons/utils/: __init__.py  access.py  logger.py  tools.py  tradingdate.py
tests/: main.ipynb  main.py
(+33 files in other folders)
