[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabwons"
version = "1.0.7"
description = "SNOWBALL REVERSES LABWONS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "pandas",
    "plotly",
    "pyarrow",
    "pykrx",
    "pytz",
    "scipy",
    "ta"
]