[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabwons"
version = "1.3.10"
description = "SNOWBALL REVERSES LABWONS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4",
    "lxml",
    "pandas",
    "plotly",
    "pyarrow",
    "pykrx",
    "pytz",
    "scipy",
    "statsmodels",
    "ta",
    "tqdm"
]